[workspace]
resolver = "2"

members = [
  "cstree2d",
]

[workspace.dependencies]
cstree = "0.13.0"
indoc = "2.0.7"

[workspace.lints.clippy]
pedantic = "warn"

default_trait_access = {level = "allow", priority = 1}
items_after_statements = {level = "allow", priority = 1}
missing_errors_doc = {level = "allow", priority = 1}
missing_panics_doc = {level = "allow", priority = 1}
module_name_repetitions = {level = "allow", priority = 1}
must_use_candidate = {level = "allow", priority = 1}
needless-raw-string-hashes = {level = "allow", priority = 1}
redundant_closure_for_method_calls = {level = "allow", priority = 1}
return_self_not_must_use = {level = "allow", priority = 1}
similar_names = {level = "allow", priority = 1}
too_many_lines = {level = "allow", priority = 1}
